[OfflinePages] Classifies PRERENDERING_FAILED cases whether to TryNext

Defines new PRERENDERING_FAILED_NO_NEXT for failure types where the
Coordinator should not continue process the next request and now will
process the next request for PRERENDERING_FAILED failures.

I took a code inspection pass on the prerender code and identified
most of the FinalStatus codes we see in UMA into whether they are
FAILED, FAILED_NO_RETRY, or FAILED_NO_NEXT. There we a couple I
wasn't confident about that I left to default as FAILED.

BUG=670529

Review-Url: https://codereview.chromium.org/2548903002
Cr-Commit-Position: refs/heads/master@{#436461}

Former-commit-id: f9a803de56a74d1f92a07d2ee0934ecd0ca8ace4